Helium Commander Changelog
==========================

Here you'll find the major differences between each release.

Version 0.5.2
-------------

Released on April 25th 2016

- Adds --main support for sensor-script deploy
- Adds -sf support for sensor-script deploy to enable listing sensor ids in a file


Version 0.5.1
-------------

Released on April 23th 2016

- Adds -h as a short form for --help
- Adds --uuid as as a top level flag to display full uuids
- Adds --format as a top level option to force output format if needed


Version 0.5.0
-------------

Released on April 21th 2016

- Use short ids or the name in addition to the full uuid of resources for commands!
- Fixes cloud-script status command for normal running scripts
- Add ability to name and set state of a cloud-script on deploy


Version 0.4.9
-------------

Released on April 20th 2016

- Fixes up label create, delete and add subcommands issues


Version 0.4.8
-------------

Released on April 19th 2016

- Fixes up virtual sensor creation


Version 0.4.7
-------------

Released on April 19th 2016

- Removes the debug information from the cloud-script deploy command
- Adds the cloud-script status subcommand to print out error details


Version 0.4.6
-------------

Released on April 19th 2016

- Fixes erroneous entry in deploying cloud-script


Version 0.4.5
-------------

Released on April 18th 2016

- Adds the --main option to the cloud-script deploy sub-command


Version 0.4.4
-------------

Released on April 17th 2016

- Removes the api-key requirement to allow user auth to work



Version 0.4.3
-------------

Released on April 15th 2016

- Adds the update subcommandn for sensors
- Exposes service level ability to post to a sensor timeseries


Version 0.4.2
-------------

Released on April 14th 2016

- Introduces the cloud-script deplpoy subcommand
- Add option to change name of cloud-script during start/stop


Version 0.4.1
-------------

Released on April 13th 2016

- Introduces user command